--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,7 @@ user:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+    prefix: /back
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
