--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    project_user.example:
-#        class: Project\UserBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    app.form.registration:
+        class: UserBundle\Form\Type\RegistrationFormType
+        tags:
+            - { name: form.type, alias: app_user_registration }
