Customize registration form

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,3 +82,6 @@ fos_user:
     from_email:
         address: nyavo01@gmail.com
         sender_name: Ny Avo
+    registration:
+        form:
+            type: UserBundle\Form\Type\RegistrationFormType
